HV-1266 Updating build instructions to reflect relocation of @Generated